add google analytics

--- a/index.html
+++ b/index.html
@@ -15,12 +15,24 @@
     <script src="javascripts/bootstrap.min.js" type="text/javascript" language="JavaScript"></script>
     <script src="javascripts/main.js" type="text/javascript" language="JavaScript"></script>
 
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-33780487-1']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
+    </script>
+
     <link type="text/css" rel="stylesheet" href="stylesheets/SyntaxHighlighter/shCoreRDark.css"/>
     <link type="text/css" rel="Stylesheet" href="stylesheets/SyntaxHighlighter/shThemeRDark.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css" media="screen" />
-    <!--<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />-->
-
     <title >BackboneMVC : Add Controllers to Backbone.js</title >
 </head >
 
