--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
         <h5>Notice:</h5>
         <ul>
             <li>You can put the attributes and methods for your <code>Controller</code> in the <code>properties</code> parameter.</li>
-            <li>You must at least specify the <code>name</code> attribute, so the router will know what is the controller's name in the url.</li>
-            <li>The methods that do not start with an underscore(_) is action methods, and will be mapped by urls. The ones that start with an underscore
+            <li>You must at least specify the <code>name</code> attribute, so the router will know what the controller's name in the url is.</li>
+            <li>The methods that do not start with an underscore(_) are action methods, and will be mapped by urls. The ones that start with an underscore
                 are private methods, which will be disregarded by the router.</li>
         </ul>
 
