--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 
     </script>
 
+
+
     <link type="text/css" rel="stylesheet" href="stylesheets/SyntaxHighlighter/shCoreRDark.css"/>
     <link type="text/css" rel="Stylesheet" href="stylesheets/SyntaxHighlighter/shThemeRDark.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css" media="screen" />
+
     <title >BackboneMVC : Add Controllers to Backbone.js</title >
 </head >
 
@@ -663,7 +666,17 @@ var Child2 = Parent.extend({
         </section>
     </section >
 </div >
-
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-9216950267262252";
+/* BackboneMVC */
+google_ad_slot = "6315781812";
+google_ad_width = 120;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript"
+        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 
 </body >
 </html >
