--- a/index.html
+++ b/index.html
@@ -665,8 +665,8 @@ var Child2 = Parent.extend({
 </div >
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-9216950267262252";
-/* BackboneMVC */
-google_ad_slot = "6315781812";
+/* BackboneMVC wider */
+google_ad_slot = "7250722314";
 google_ad_width = 160;
 google_ad_height = 600;
 //-->
