--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@ var Child2 = Parent.extend({
             redirected to, as the example above shows, or any other code logic can be used.
         </p>
         <p>
-            If you define customized rules, it will always have higher priority than BackboneMVC's automatic routing.
+            If you define custom rules, they will always have higher priority than BackboneMVC's automatic routing.
             See examples:
         </p>
         <p>Trigger <code>special_handling()</code> <a href="#root/action/hardcoded_value">#root/action/hardcoded_value</a></p>
