--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ var Child2 = Parent.extend({
         <section id="support-or-contact" class="chapter">
             <h3 >Support or Contact</h3 >
             <p>Have questions or suggestions? Please contact <a href="https://github.com/chance-an">Changsi An</a> by me@anchangsi.com .</p>
-            <p>Copyright 2012 Changsi An</p>
+            <p>Copyright 2012-2013 Changsi An</p>
         </section>
     </section >
 </div >
