Make sure that BackboneMVC will return a symbol that represents the module.

--- a/example/requirejs/requrejs_demo.html
+++ b/example/requirejs/requrejs_demo.html
@@ -17,6 +17,11 @@
             },
             shim:{
                 'Backbone': ['underscore'],
+//                'BackboneMVC' : {
+//                    deps: ['Backbone'],
+//                    exports: "BackboneMVC"
+//                },
+
                 'BackboneMVC' : ['Backbone']
             }
         });
